[package]
name = "open"
version = "1.0.0"
authors = ["Valerie Wolfe <sleeplessval@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
toml = "0.7.5"

[profile.release]
opt-level = 's'
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = "debuginfo"

